Fixex cutting off long links in webkit http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -72,6 +72,17 @@ h4 {
 a {
 	color: $lichtgrijs;
 	text-decoration: underline;
+
+	//http://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+	-ms-word-break: break-all;
+    word-break: break-all;
+
+    /* Non standard for webkit */
+    word-break: break-word;
+
+	-webkit-hyphens: auto;
+   	-moz-hyphens: auto;
+    hyphens: auto;
 }
 
 a:hover {
